<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-9dp"
    tools:layout_editor_absoluteY="0dp">

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="41dp"
        android:text="@string/suma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNueve"
        app:layout_constraintTop_toBottomOf="@+id/tvNumero" />

    <Button
        android:id="@+id/btnSiete"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="68dp"
        android:text="@string/siete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumero" />

    <Button
        android:id="@+id/btnOcho"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="68dp"
        android:text="@string/ocho"
        app:layout_constraintStart_toEndOf="@+id/btnSiete"
        app:layout_constraintTop_toBottomOf="@+id/tvNumero" />

    <Button
        android:id="@+id/btnNueve"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="68dp"
        android:text="@string/nueve"
        app:layout_constraintStart_toEndOf="@+id/btnOcho"
        app:layout_constraintTop_toBottomOf="@+id/tvNumero" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="41dp"
        android:text="@string/resta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSeis"
        app:layout_constraintTop_toBottomOf="@+id/btnSuma" />

    <Button
        android:id="@+id/btnSeis"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/seis"
        app:layout_constraintStart_toEndOf="@+id/btnCinco"
        app:layout_constraintTop_toBottomOf="@+id/btnNueve" />

    <Button
        android:id="@+id/btnCinco"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/cinco"
        app:layout_constraintStart_toEndOf="@+id/btnCuatro"
        app:layout_constraintTop_toBottomOf="@+id/btnOcho" />

    <Button
        android:id="@+id/btnCuatro"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="12dp"
        android:text="@string/cuatro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSiete" />

    <Button
        android:id="@+id/btnUno"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="12dp"
        android:text="@string/uno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCuatro" />

    <Button
        android:id="@+id/btnCero"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="12dp"
        android:text="@string/cero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUno" />

    <Button
        android:id="@+id/btnResultado"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/resultado"
        app:layout_constraintStart_toEndOf="@+id/btnCero"
        app:layout_constraintTop_toBottomOf="@+id/btnDos" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="41dp"
        android:text="@string/division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBorrar"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicacion" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/borrar"
        app:layout_constraintStart_toEndOf="@+id/btnResultado"
        app:layout_constraintTop_toBottomOf="@+id/btnTres" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/dos"
        app:layout_constraintStart_toEndOf="@+id/btnUno"
        app:layout_constraintTop_toBottomOf="@+id/btnCinco" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/tres"
        app:layout_constraintStart_toEndOf="@+id/btnDos"
        app:layout_constraintTop_toBottomOf="@+id/btnSeis" />

    <Button
        android:id="@+id/btnMultiplicacion"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="41dp"
        android:text="@string/multiplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnTres"
        app:layout_constraintTop_toBottomOf="@+id/btnResta" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="133dp"
        android:layout_height="32dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="142dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOperacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="56dp"
        android:width="300dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="56dp"
        android:width="300dp"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOperacion" />

</androidx.constraintlayout.widget.ConstraintLayout>